--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -8,6 +8,36 @@
   <style>
     html, body { height: 100%; margin: 0; }
     #elm-main { height: 100vh; }
+
+    /* Markdown content styling */
+    .markdown-content pre {
+      background-color: #1e1e1e;
+      border: 1px solid #444;
+      border-radius: 0.375rem;
+      padding: 1rem;
+      overflow-x: auto;
+    }
+
+    .markdown-content code {
+      color: #ffc107;
+      background-color: transparent;
+    }
+
+    .markdown-content pre code {
+      display: block;
+      color: #ffc107;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 0.95em;
+      line-height: 1.5;
+    }
+
+    .markdown-content p code {
+      background-color: #2d2d2d;
+      color: #ffc107;
+      padding: 0.2em 0.4em;
+      border-radius: 0.25rem;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
